backend/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: deskship
spec:
  selector:
    deskship: backend
  ports:
    - protocol: TCP
      port: 8000
