backend/backend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: deskship
spec:
  rules:
    - http:
        paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
  ingressClassName: nginx
